crochet-ttd Phase 1: @TimeTravelBody auto-instrumented line stepping
Adds:
* @TimeTravelBody method annotation
* TtdAgent (-javaagent) that registers LineMarkerTransformer
* LineMarkerTransformer (ASM-based) that inserts Ttd.lineHit(owner,
  methodSig, line) at every LineNumberTable entry of any method
  bearing the annotation
* Ttd.lineHit() runtime entry — works like breakpoint() but carries
  source-location context (owner.method:line) for the REPL to display.
  Silent no-op outside an active session.
* Repl prompt now shows "at step N <Class>.<method>(<desc>):<line>"
  for line-marker hits

Mechanism is the same as Phase 0: each line-marker fires a step counter
bump; if past the REPL's target stop, it pauses and yields to the REPL;
otherwise (silent replay) it returns immediately. Back-stepping throws
a Restart caught by Ttd.session, which rolls back the tracked root via
Crochet and re-runs the body with a new target stop.

Pom packaging follows crochet-agent's pattern: shaded ASM relocated to
edu.neu.ccs.prl.crochet.ttd.shaded.asm so the agent jar is
self-contained and doesn't conflict with user-side ASM versions.
Premain-Class manifest entry. Surefire argLine adds both the TTD agent
and the Crochet agent (TTD first so its line markers exist in the
bytecode by the time Crochet's transformer sees the class).

Tests:
* TtdSmokeTest (Phase 0) — 3/3 pass, unchanged
* TtdLineMarkerTest (Phase 1) — 2/2 pass:
  - auto_line_markers_fire: verifies the REPL prompt mentions the
    source class + method, proving auto-instrumentation is active
  - auto_line_markers_back_step_restores_state: jumps forward to step
    5, inspects, back-steps to step 1, inspects, asserts state.value
    is smaller (rolled back to a prior mutation)

Bug fixed during development: skip-list prefix
"edu/neu/ccs/prl/crochet/ttd/Ttd" was matching test classes named
TtdSomething. Replaced with narrower bootstrap-only skip; the
constant-pool pre-filter handles agent-internal classes (none of
which ca